bdr.BDR.scala.error
Compilation error:
BDR:1: error: reassignment to val
while (isOverMessage=true){
                    ^