bdr.BDR.scala.code
while (isOverMessage=true){
  if (readMessage()=='R'){
    left();
    forward();
  }
  if (readMessage()=='L'){
    right();
    forward();
  }
  if (readMessage()=='I'){
    left();
    left();
    forward();
  }
  if (readMessage()=='A'){
    forward();
  }
  if (readMessage()=='B'){
    forward();
    forward();
  }
  if (readMessage()=='C'){
    forward();
    forward();
    forward();
  }
  if (readMessage()=='Z'){
    backward();
  }
  if (readMessage()=='Y'){
    backward();
    backward();
  }
  if (readMessage()=='X'){
    backward();
    backward();
    backward();
  }
}